--- a/.github/workflows/publish-github-research-mcp.yml
+++ b/.github/workflows/publish-github-research-mcp.yml
@@ -3,13 +3,6 @@ name: Publish Github Research MCP to PyPI
 on:
   release:
     types: [created]
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
 
 jobs:
   publish:
@@ -17,32 +10,21 @@ jobs:
     permissions:
       id-token: write
     environment: pypi
-    strategy:
-      matrix:
-        package:
-          - github-research-mcp
-
-    defaults:
-      run:
-        working-directory: ${{ matrix.package }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: "Install uv"
         uses: astral-sh/setup-uv@v6
-      
+
       - name: "Install ${matrix.package}"
         run: uv sync --locked --group dev
-        working-directory: "${{ matrix.package }}"
 
       - name: "Test ${matrix.package}"
         run: uv run pytest tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_BASE_URL: ${{ vars.OPENAI_BASE_URL }}
-          OPENAI_MODEL: ${{ vars.OPENAI_MODEL }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
       - name: "Build ${matrix.package}"
         run: uv build
