--- a/.github/workflows/publish-github-research-mcp.yml
+++ b/.github/workflows/publish-github-research-mcp.yml
@@ -17,18 +17,18 @@ jobs:
       - name: "Install uv"
         uses: astral-sh/setup-uv@v6
 
-      - name: "Install ${matrix.package}"
+      - name: "Install"
         run: uv sync --locked --group dev
 
-      - name: "Test ${matrix.package}"
+      - name: "Test"
         run: uv run pytest tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
-      - name: "Build ${matrix.package}"
+      - name: "Build"
         run: uv build
 
-      - name: "Publish to PyPi ${matrix.package}"
+      - name: "Publish to PyPi"
         if: github.event_name == 'release' && github.event.action == 'created'
         run: uv publish -v dist/*
