Disable type checking on CI for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
       - name: "Format"
         run: uv run ruff format --check
 
-      - name: "Type Check"
-        run: uv run basedpyright
+      #- name: "Type Check"
+      #  run: uv run basedpyright
 
   tests:
     needs: static_analysis
