Skip some summarize tests on CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
       - name: "Format"
         run: uv run ruff format --check
 
-      #- name: "Type Check"
-      #  run: uv run basedpyright
+      # - name: "Type Check"
+      #   run: uv run basedpyright
 
   tests:
     needs: static_analysis
@@ -46,7 +46,7 @@ jobs:
         run: uv sync --locked --group dev
 
       - name: "Test ${matrix.package}"
-        run: uv run pytest tests
+        run: uv run pytest tests -m "not skip_on_ci"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
