--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,37 +6,29 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.12.15",
-    "async-lru>=2.0.5",
-    "asyncclick>=8.1.8",
-    "dirty-equals>=0.9.0",
+    "click>=8.3.0",
     "diskcache>=5.6.3",
     "elasticsearch>=9.1.1",
     "fastmcp>=2.3.5",
     "githubkit>=0.13.2",
+    "gitpython>=3.1.45",
     "google-genai>=1.37.0",
-    "inline-snapshot>=0.28.0",
     "makefun>=1.16.0",
     "mcp>=1.9.0",
     "openai>=1.106.1",
     "pydantic>=2.11.7",
-    "pytest-dotenv>=0.5.2",
+    "rpygrep>=0.2.0",
 ]
-
-[tool.poetry]
-packages = [
-    { include = "github_research_mcp", from = "src" }
-]
-[tool.hatch.metadata]
-allow-direct-references=true
 
 [project.scripts]
 github-research-mcp = "github_research_mcp.main:run_mcp"
 agents-md-generator = "github_research_mcp.agents_md:run_mcp"
+code-search = "github_research_mcp.code_search:run_mcp"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 env_files = [".env"]
-addopts = ["--inline-snapshot=create,fix","-vv","-s"]
+addopts = ["--inline-snapshot=disable","-vv","-s"]
 markers = [
     "skip_on_ci: Skip running the test when running on CI",
 ]
@@ -48,14 +40,14 @@ dev = [
   "pytest-asyncio",
   "ruff",
   "basedpyright>=1.31.6",
-]
-lint = [
-  "ruff"
+    "pytest-dotenv>=0.5.2",
+    "inline-snapshot>=0.28.0",
+    "dirty-equals>=0.9.0",
 ]
 
 [build-system]
-requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.2,<0.9.0"]
+build-backend = "uv_build"
 
 [tool.ruff]
 target-version = "py312"
