--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "github_research_mcp"
-version = "0.1.2"
-description = "Github Search Mcp project"
+version = "0.2.0"
+description = "Github Research MCP project"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -27,7 +27,7 @@ code-search = "github_research_mcp.code_search:run_mcp"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-env_files = [".env"]
+env_files = [".test.env"]
 addopts = ["--inline-snapshot=disable","-vv","-s"]
 markers = [
     "skip_on_ci: Skip running the test when running on CI",
